# STAR-Searcher

./: .gitignore  .gitmodules
Star-Searcher/gazebo_map_generator/: CMakeLists.txt
Star-Searcher/gazebo_map_generator/src/: DoorControlPlugin.cc
Star-Searcher/rotors_simulator/rotors_description/urdf/: VLP-16-semantic.urdf.xacro  ardrone.xacro
Star-Searcher/search_planner/: test_push.txt
Star-Searcher/search_planner/search_planner/active_perception/: CMakeLists.txt  package.xml
Star-Searcher/search_planner/search_planner/active_perception/src/: frontier_finder.cpp  graph_node.cpp
Star-Searcher/search_planner/search_planner/exploration_manager/: CMakeLists.txt  package.xml
Star-Searcher/search_planner/search_planner/exploration_manager/config/: tags.yaml
Star-Searcher/search_planner/search_planner/exploration_manager/launch/: algorithm.xml  continuous_detection.launch  env_simulator.xml  laboratory.launch  office.launch  room1.launch  rviz.launch  search_laboratory.launch  search_map1.launch  search_office.launch  (+3 more)
Star-Searcher/search_planner/search_planner/plan_env/: CMakeLists.txt  package.xml
Star-Searcher/search_planner/search_planner/plan_env/include/plan_env/: map_ros.h  sdf_map.h
Star-Searcher/search_planner/search_planner/plan_env/src/: map_ros.cpp  sdf_map.cpp  semantic_rx.cpp
Star-Searcher/search_planner/search_planner/plan_manage/: CMakeLists.txt  package.xml
Star-Searcher/velodyne_simulator/velodyne_gazebo_plugins/: CMakeLists.txt
Star-Searcher/velodyne_simulator/velodyne_gazebo_plugins/src/: GazeboRosVelodyneSemanticLaser.cpp
(+27 files in other folders)
